--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,30 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Carousel {
+  background-color: #48cae4;
+  height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.leftButton {
+  background-color: #0096c7;
+  margin-left: 50px;
+  height: 80px;
+  width: 100px;
+  margin-right: auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.rightButton {
+  background-color: #0096c7;
+  margin-right: 50px;
+  height: 80px;
+  width: 100px;
+  margin-left: auto;
+}
+
+.Label {
+  padding: 10px;
+}
+.Counter {
+  font-size: 30px;
 }
